--- a/index.html
+++ b/index.html
@@ -1,23 +1,12 @@
 <!DOCTYPE html>
-<html ng-app="">
+<html ng-app="ngMadLib">
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <title>ngMadLibs</title>
    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js" type="text/javascript"></script>
 </head>
-<body ng-init="orderedWords = ['name','dirty','obnoxious','job','celeb','huge','task','skill','adjective']; 
-               words = {
-                         'name':{'value':'', 'holder':'female name','size':11},
-                         'dirty':{'value':'', 'holder':'Dirty task', 'size':8},
-                         'obnoxious':{'value':'', 'holder':'Obnoxious celebrity', 'size':17},
-                         'job':{'value':'', 'holder':'Job title', 'size': 7},
-                         'celeb':{'value':'', 'holder':'Celebrity', 'size': 8},
-                         'huge':{'value':'', 'holder':'Huge number', 'size': 11},
-                         'task':{'value':'', 'holder':'Tedious task', 'size': 12},
-                         'skill':{'value':'', 'holder':'Useless skill', 'size': 11},
-                         'adjective':{'value':'', 'holder':'Adjective', 'size': 8}
-                       };">
+<body ng-controller="madLibsController">
 
 <div class="container">
 
@@ -69,6 +58,7 @@
   </div>
 
 </div>
+ <script src="js/ngMadLib.js"></script>
 </body>
 
  
