--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <title>ngMadLibs</title>
    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js" type="text/javascript"></script>
+  <script src="js/ngMadLib.js"></script>
 </head>
 <body ng-controller="madLibsController">
 
@@ -18,47 +19,29 @@
     </div>
   </div>
 
-  <div class="input-box">
+  <div class="input-box" ng-show="!tellStory" >
     <h3>Provide the following words:</h3>
-    <div class="input-wrapper" ng-repeat="word in orderedWords">
-      <input type="text" ng-model="words[word].value" size="{{words[word].size}}" placeholder="{{words[word].holder}}">
-    </div>
+    <form name="wordInput" ng-submit="tellStory = !tellStory">
+      <div class="input-wrapper" ng-repeat="word in orderedWords">
+        <input type="{{words[word].type}}" name="{{word}}" ng-model="words[word].value" size="{{words[word].size}}" placeholder="{{words[word].holder}}" required >
+      </div>
+      <input type="submit" value="Generate My Mad Lib" >
+
+    </form>
   </div>
 
-  <div class="story-box">
+  <div class="story-box" ng-show="tellStory">
     <p>
-      <span class="gameword"><span ng-if="words.name.value==''">{{<!>{{words.name.holder}}<!>}}</span>{{words.name.value}}</span> 
-      was a(n) 
-      <span class="gameword"><span ng-if="words.job.value==''">{{<!>{{words.job.holder}}<!>}}</span>{{words.job.value}}</span> 
-      who loved technology. Although she loved parts of her job, she absolutely hated  
-      <span class="gameword"><span ng-if="words.task.value==''">{{<!>{{words.task.holder}}<!>}}</span>{{words.task.value}}</span> 
-      and 
-      <span class="gameword"><span ng-if="words.dirty.value==''">{{<!>{{words.dirty.holder}}<!>}}</span>{{words.dirty.value}}</span>.
-      So, 
-      <span class="gameword"><span ng-if="words.name.value==''">{{<!>{{words.name.holder}}<!>}}</span>{{words.name.value}}</span>
-      met with her life mentor 
-      <span class="gameword"><span ng-if="words.celeb.value==''">{{<!>{{words.celeb.holder}}<!>}}</span>{{words.celeb.value}}</span> who told her to learn how to 
-      <span class="gameword"><span ng-if="words.skill.value==''">{{<!>{{words.skill.holder}}<!>}}</span>{{words.skill.value}}</span>
-      with Thinkful. Thinkful didn't offer a course on 
-      <span class="gameword"><span ng-if="words.skill.value==''">{{<!>{{words.skill.holder}}<!>}}</span>{{words.skill.value}}</span> so she studied programming instead. 
-    </p>
-    <p>
-      What a great decision! With her new skills, 
-      <span class="gameword"><span ng-if="words.name.value==''">{{<!>{{words.name.holder}}<!>}}</span>{{words.name.value}}</span> 
-      built a(n) 
-      <span class="gameword"><span ng-if="words.adjective.value==''">{{<!>{{words.adjective.holder}}<!>}}</span>{{words.adjective.value}}</span>
-      robot named 
-      <span class="gameword"><span ng-if="words.obnoxious.value==''">{{<!>{{words.obnoxious.holder}}<!>}}</span>{{words.obnoxious.value}}</span>
-      that not only loved 
-      <span class="gameword"><span ng-if="words.dirty.value==''">{{<!>{{words.dirty.holder}}<!>}}</span>{{words.dirty.value}}</span>
-      but did it
-      <span class="gameword"><span ng-if="words.huge.value==''">{{<!>{{words.huge.holder}}<!>}}</span>{{words.huge.value}}</span> 
-      faster. 
-    </p>
+    <span class="gameword">{{words.name.value}}</span> was a(n) <span class="gameword">{{words.job.value}}</span> who loved technology. Although she loved parts of her job, she absolutely hated  <span class="gameword">{{words.task.value}}</span> and <span class="gameword">{{words.dirty.value}}</span>. So, <span class="gameword">{{words.name.value}}</span> met with her life mentor <span class="gameword">{{words.celeb.value}}</span> who told her to learn how to <span class="gameword">{{words.skill.value}}</span> with Thinkful. Thinkful didn't offer a course on <span class="gameword">{{words.skill.value}}</span> so she studied programming instead. 
+  </p>
+    What a great decision! With her new skills, <span class="gameword">{{words.name.value}}</span> built a(n) <span class="gameword">{{words.adjective.value}}</span> robot named <span class="gameword">{{words.obnoxious.value}}</span> that not only loved <span class="gameword">{{words.dirty.value}}</span> but did it <span class="gameword">{{words.huge.value}}</span> faster. 
+   <p>
+    <button ng-click="emptyWordsAndAskForInput()">Change words</button>
   </div>
 
 </div>
- <script src="js/ngMadLib.js"></script>
+<!-- <pre>{{wordInput | json}}</pre> -->
+
 </body>
 
  
