View,Business logic in View,Controller.

--- a/index.html
+++ b/index.html
@@ -21,20 +21,43 @@
 
   <div class="input-box" ng-show="!tellStory" >
     <h3>Provide the following words:</h3>
-    <form name="wordInput" ng-submit="tellStory = !tellStory">
-      <div class="input-wrapper" ng-repeat="word in orderedWords">
-        <input type="{{words[word].type}}" name="{{word}}" ng-model="words[word].value" size="{{words[word].size}}" placeholder="{{words[word].holder}}" required >
+    <form name="wordInput" ng-submit="tellStory = !tellStory" required>    
+      <div class="input-wrapper">
+         <input name="name" ng-model="words.name" placeholder="female name" size="11" type="text" required>
       </div>
+      <div class="input-wrapper">
+         <input name="dirty" ng-model="words.dirty" placeholder="Dirty task" size="8" type="text" required>
+      </div>
+      <div class="input-wrapper">
+         <input name="obnoxious" ng-model="words.obnoxious" placeholder="Obnoxious celebrity" size="17" type="text" required>
+      </div>
+      <div class="input-wrapper">
+         <input name="job" ng-model="words.job" placeholder="Job title" size="7" type="text" required>
+      </div>
+      <div class="input-wrapper">
+         <input name="celeb" ng-model="words.celeb" placeholder="Celebrity" size="8" type="text" required>
+      </div>
+      <div class="input-wrapper">
+         <input name="huge" ng-model="words.huge" placeholder="Huge number" size="7" type="number" required>
+      </div>
+      <div class="input-wrapper">
+         <input name="task" ng-model="words.task" placeholder="Tedious task" size="12" type="text" required>
+      </div>
+      <div class="input-wrapper">
+         <input name="skill" ng-model="words.skill" placeholder="Useless skill" size="11" type="text" required>
+      </div>
+      <div class="input-wrapper">
+         <input name="adjective" ng-model="words.adjective" placeholder="Adjective" size="8" type="text" required>
+      </div>             
       <input type="submit" value="Generate My Mad Lib" >
-
-    </form>
+     </form>
   </div>
 
   <div class="story-box" ng-show="tellStory">
     <p>
-    <span class="gameword">{{words.name.value}}</span> was a(n) <span class="gameword">{{words.job.value}}</span> who loved technology. Although she loved parts of her job, she absolutely hated  <span class="gameword">{{words.task.value}}</span> and <span class="gameword">{{words.dirty.value}}</span>. So, <span class="gameword">{{words.name.value}}</span> met with her life mentor <span class="gameword">{{words.celeb.value}}</span> who told her to learn how to <span class="gameword">{{words.skill.value}}</span> with Thinkful. Thinkful didn't offer a course on <span class="gameword">{{words.skill.value}}</span> so she studied programming instead. 
+    <span class="gameword">{{words.name}}</span> was a(n) <span class="gameword">{{words.job}}</span> who loved technology. Although she loved parts of her job, she absolutely hated  <span class="gameword">{{words.task}}</span> and <span class="gameword">{{words.dirty}}</span>. So, <span class="gameword">{{words.name}}</span> met with her life mentor <span class="gameword">{{words.celeb}}</span> who told her to learn how to <span class="gameword">{{words.skill}}</span> with Thinkful. Thinkful didn't offer a course on <span class="gameword">{{words.skill}}</span> so she studied programming instead. 
   </p>
-    What a great decision! With her new skills, <span class="gameword">{{words.name.value}}</span> built a(n) <span class="gameword">{{words.adjective.value}}</span> robot named <span class="gameword">{{words.obnoxious.value}}</span> that not only loved <span class="gameword">{{words.dirty.value}}</span> but did it <span class="gameword">{{words.huge.value}}</span> faster. 
+    What a great decision! With her new skills, <span class="gameword">{{words.name}}</span> built a(n) <span class="gameword">{{words.adjective}}</span> robot named <span class="gameword">{{words.obnoxious}}</span> that not only loved <span class="gameword">{{words.dirty}}</span> but did it <span class="gameword">{{words.huge}}</span> faster. 
    <p>
     <button ng-click="emptyWordsAndAskForInput()">Change words</button>
   </div>
