--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <title>ngMadLibs</title>
    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js" type="text/javascript"></script>
+   <script type="text/javascript" src="https://code.angularjs.org/1.3.10/angular-animate.min.js"></script>
   <script src="js/ngMadLib.js"></script>
 </head>
 <body ng-controller="madLibsController">
@@ -21,7 +22,7 @@
 
   <div class="input-box" ng-show="!tellStory" >
     <h3>Provide the following words:</h3>
-    <form name="wordInput" ng-submit="submitWords()" required novalidate>    
+    <form name="wordInput" ng-submit="submitWords()" required novalidate>
       <div class="input-wrapper">
          <input name="name" ng-model="words.name" placeholder="female name" size="11" type="text" required>
          <span class="error" ng-if="(wordInput.$submitted && wordInput.name.$error.required)">Me too!</span>
@@ -65,16 +66,19 @@
 
   <div class="story-box" ng-show="tellStory">
     <p>
-    <span class="gameword">{{words.name}}</span> was a(n) <span class="gameword">{{words.job}}</span> who loved technology. Although she loved parts of her job, she absolutely hated  <span class="gameword">{{words.task}}</span> and <span class="gameword">{{words.dirty}}</span>. So, <span class="gameword">{{words.name}}</span> met with her life mentor <span class="gameword">{{words.celeb}}</span> who told her to learn how to <span class="gameword">{{words.skill}}</span> with Thinkful. Thinkful didn't offer a course on <span class="gameword">{{words.skill}}</span> so she studied programming instead. 
-  </p>
-  <p>
-    What a great decision! With her new skills, <span class="gameword">{{words.name}}</span> built a(n) <span class="gameword">{{words.adjective}}</span> robot named <span class="gameword">{{words.obnoxious}}</span> that not only loved <span class="gameword">{{words.dirty}}</span> but did it <span class="gameword">{{words.huge}}</span> faster. 
-  </p>   
-    <p><button ng-click="reset()">Change words</button></p>
+      <span class="gameword">{{words.name}}</span> was a(n) <span class="gameword">{{words.job}}</span> who loved technology. Although she loved parts of her job, she absolutely hated  <span class="gameword">{{words.task}}</span> and <span class="gameword">{{words.dirty}}</span>. So, <span class="gameword">{{words.name}}</span> met with her life mentor <span class="gameword">{{words.celeb}}</span> who told her to learn how to <span class="gameword">{{words.skill}}</span> with Thinkful. Thinkful didn't offer a course on <span class="gameword">{{words.skill}}</span> so she studied programming instead.
+    </p>
+    <p>
+      What a great decision! With her new skills, <span class="gameword">{{words.name}}</span> built a(n) <span class="gameword">{{words.adjective}}</span> robot named <span class="gameword">{{words.obnoxious}}</span> that not only loved <span class="gameword">{{words.dirty}}</span> but did it <span class="gameword">{{words.huge}}</span> faster. 
+    </p>
+    <p><button ng-click="reset()">Change words</button>
+    </p>
+  </div>
+
+  <div class="squirrel" ng-if="tellStory">
+    <i class="my-icon"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></i>
   </div>
 
 </div>
 </body>
-
- 
 </html>
